--- a/app/src/main/res/layout/salon_list_item.xml
+++ b/app/src/main/res/layout/salon_list_item.xml
@@ -1,23 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="10sp"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:descendantFocusability="beforeDescendants"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp">
 
-   <TextView
-       android:id="@+id/salon_name"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:textAppearance="@android:style/TextAppearance.Medium"
-       android:text="Mr X Salon"
-       />
-    <TextView
-        android:id="@+id/salon_location"
-        android:layout_marginTop="10dp"
-        android:textAppearance="@android:style/TextAppearance.Medium"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Bangalore"
-        />
+        android:background="@drawable/card_background_selector"
+        android:descendantFocusability="afterDescendants"
+        android:orientation="vertical"
+        android:padding="10dp">
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/salon_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mr X Salon"
+            android:textColor="@android:color/holo_blue_dark"
+            android:textAppearance="@android:style/TextAppearance.Medium" />
+
+        <TextView
+            android:id="@+id/salon_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textColor="@android:color/holo_orange_light"
+            android:text="Bangalore"
+            android:textAppearance="@android:style/TextAppearance.Medium" />
+
+    </LinearLayout>
+</FrameLayout>
